Fixed width so bold doesn't shift button.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -136,7 +136,7 @@ body
     margin-top: 50px;
    
     display: inline-block;
-    min-width: 170px;
+    min-width: 240px;
     color: white;
     border-radius: 7px;
     background-color: #00a9ec;
